--- a/Torrent_To_Google_Drive_Downloader.ipynb
+++ b/Torrent_To_Google_Drive_Downloader.ipynb
@@ -64,6 +64,8 @@
         "colab": {}
       },
       "source": [
+        "!python -m pip install --upgrade pip setuptools wheel",
+        "!python -m pip install lbry-libtorrent",
         "!apt install python3-libtorrent\n",
         "\n",
         "import libtorrent as lt\n",
